--- a/不明の点があれば読んで.md
+++ b/不明の点があれば読んで.md
@@ -7,3 +7,6 @@ npm i
 npm run dev
 
 ブラウザで http://localhost:5173/ を開きます。
+
+
+cd C:\Users\自分のXXX\Desktop\XXX\app　　   :: プロジェクトのルートディレクトリへ移動（重要!!!!!!!）
