--- a/不明の点があれば読んで.md
+++ b/不明の点があれば読んで.md
@@ -1,6 +1,6 @@
 app.zip を任意のフォルダに解凍します（例：C:\Users\<あなた>\Desktop\group16\app）。
 
-ルートディレクトリで依存関係をインストール：
+ルートディレクトリで依存関係をインストール：：
 npm i
 
 開発サーバーを起動：
